--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=5000
+MONGO_URL=mongodb+srv://milannariya095:OH8pZ1Tofa0p5q7j@cluster0.4aqbmc8.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=milan7023
