--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=5000
-MONGO_URL=mongodb+srv://milannariya095:OH8pZ1Tofa0p5q7j@cluster0.4aqbmc8.mongodb.net/?retryWrites=true&w=majority
+PORT=8080
+MONGO_URI="mongodb+srv://milannariya095:uMRx5i6dHU4yaNao@chatapp.d70rfr4.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET=milan7023
