--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ lerna-debug.log*
 .pnpm-debug.log*
 
 # Dependency directories
-/node_modules
+node_modules/
 jspm_packages/
 
 # Optional npm cache directory
